--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "mollie-api-node",
     "version": "1.0.0",
-    "description": "Mollie API client library for Node",
+    "description": "Official Mollie API client for Node (by Mollie B.V.)",
     "homepage": "https://github.com/mollie/mollie-api-node",
     "author": "Mollie B.V. <info@mollie.nl>",
     "keywords": ["mollie", "payment", "service", "ideal", "creditcard", "mistercash", "paysafecard", "payments", "gateway"],
