--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "mollie-api-node",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Official Mollie API client for Node (by Mollie B.V.)",
     "homepage": "https://github.com/mollie/mollie-api-node",
     "author": "Mollie B.V. <info@mollie.nl>",
-    "keywords": ["mollie", "payment", "service", "ideal", "creditcard", "mistercash", "paysafecard", "payments", "gateway"],
+    "keywords": ["mollie", "payment", "service", "ideal", "creditcard", "mistercash", "paypal", "paysafecard", "payments", "gateway"],
     "dependencies": {
         "exec-sync": ">= 0.1.6",
         "underscore": ">= 1.5.0"
