--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-    "name": "mollie-api-node",
-    "version": "1.0.1",
-    "description": "Official Mollie API client for Node (by Mollie B.V.)",
-    "homepage": "https://github.com/mollie/mollie-api-node",
-    "author": "Mollie B.V. <info@mollie.nl>",
-    "keywords": ["mollie", "payment", "service", "ideal", "creditcard", "mistercash", "paypal", "paysafecard", "payments", "gateway"],
-    "dependencies": {
-        "exec-sync": ">= 0.1.6",
-        "underscore": ">= 1.5.0"
-    },
-    "main": "./lib/mollie",
-    "repository": "git://github.com/mollie/mollie-api-node",
-    "scripts": {
-        "prepublish": "npm prune"
-    },
-    "engines": {
-        "node": ">= 0.8.0"
-    }
+  "name": "mollie-api-node",
+  "version": "1.0.2",
+  "description": "Official Mollie API client for Node (by Mollie B.V.)",
+  "homepage": "https://github.com/mollie/mollie-api-node",
+  "author": "Mollie B.V. <info@mollie.nl>",
+  "keywords": [
+    "mollie",
+    "payment",
+    "service",
+    "ideal",
+    "creditcard",
+    "mistercash",
+    "paypal",
+    "paysafecard",
+    "sofort",
+    "banking",
+    "bitcoin",
+    "payments",
+    "gateway"
+  ],
+  "dependencies": {
+    "underscore": "~1.7.0"
+  },
+  "devDependencies": {
+    "coffee-script": "~1.8.0"
+  },
+  "main": "./lib/mollie",
+  "repository": "git://github.com/mollie/mollie-api-node",
+  "scripts": {
+    "prepublish": "npm prune"
+  },
+  "engines": {
+    "node": ">= 0.8.0"
+  }
 }
