--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mollie-api-node",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "license": "BSD-3-Clause",
   "repository": "git://github.com/mollie/mollie-api-node",
   "description": "Official Mollie API client for Node (by Mollie B.V.)",
@@ -9,7 +9,7 @@
   "keywords": [
     "mollie", "payment", "service", "ideal", "creditcard", "mistercash", "bancontact", "sofort", "sofortbanking",
     "sepa", "bitcoin", "paypal", "paysafecard", "podiumcadeaukaart", "banktransfer", "direct debit", "belfius",
-    "belfius direct net", "refunds", "api", "payments", "gateway"
+    "belfius direct net", "refunds", "api", "payments", "gateway", "subscriptions", "recurring", "charges"
   ],
   "dependencies": {
     "underscore": "~1.7.0"
