--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "commitizen": "^2.9.6",
     "cz-conventional-changelog": "^2.0.0",
+    "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-import-resolver-node": "^0.3.0",
@@ -73,7 +74,7 @@
     ],
     "transform": {
       "^.+\\.jsx?$": "babel-jest",
-      "^.+\\.pem$": "<rootDir>/tests/__stubs__/fileTransformer.js"
+      "^.+\\.pem$": "<rootDir>/tests/unit/__stubs__/fileTransformer.js"
     }
   },
   "config": {
