--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mollie-api-node",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0-rc.1",
   "license": "BSD-3-Clause",
   "description": "Official Mollie API client for Node",
   "repository": {
