--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "test": "yarn run build && jest",
     "test:watch": "yarn run build && jest --watch",
     "test:cov": "yarn run build && jest --coverage",
+    "test:unit:cov": "jest ./tests/unit --coverage",
     "build": "rollup -c",
     "prettier": "prettier --single-quote --trailing-comma all --write \"{src,tests,dist}/**/*.js\""
   },
