--- a/package.json
+++ b/package.json
@@ -84,8 +84,7 @@
     "printWidth": 100,
     "singleQuote": true,
     "trailingComma": "all",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": true
+    "bracketSpacing": true
   },
   "config": {
     "commitizen": {
