--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "cz-conventional-changelog": "^2.0.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
-    "eslint-config-mollie-node": "0.0.1-alpha.2",
+    "@mollie/eslint-config-node": "0.0.1-alpha.2",
     "eslint-import-resolver-node": "^0.3.0",
     "eslint-plugin-import": "^2.2.0",
     "husky": "^0.13.4",
