--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "test:cov": "yarn run build && jest --coverage",
     "test:unit:cov": "jest ./tests/unit --coverage",
     "build": "rollup -c",
-    "prettier": "prettier --single-quote --trailing-comma all --write \"{src,tests,dist}/**/*.js\""
+    "prettier": "prettier --write \"{src,tests,dist}/**/*.js\""
   },
   "dependencies": {
     "axios": "^0.16.1",
@@ -49,13 +49,13 @@
     "cz-conventional-changelog": "^2.0.0",
     "dotenv": "^4.0.0",
     "eslint": "^3.19.0",
-    "@mollie/eslint-config-node": "0.0.1-alpha.2",
+    "@mollie/eslint-config-node": "0.0.1-alpha.3",
     "eslint-import-resolver-node": "^0.3.0",
     "eslint-plugin-import": "^2.2.0",
     "husky": "^0.13.4",
     "jest-cli": "^19.0.2",
     "lint-staged": "^3.4.1",
-    "prettier": "^1.3.1",
+    "prettier": "^1.14.0",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-includepaths": "^0.2.2",
