--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "main": "dist/mollie.js",
   "engines": {
-    "node" : ">=4.8"
+    "node": ">=4.8"
   },
   "scripts": {
     "prepublish": "yarn run build",
@@ -41,30 +41,30 @@
     "qs": "^6.4.0"
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.8.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-jest": "^19.0.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "commitizen": "^2.9.6",
-    "cz-conventional-changelog": "^2.0.0",
-    "dotenv": "^4.0.0",
-    "eslint": "^3.19.0",
     "@mollie/eslint-config-node": "0.0.1-alpha.3",
-    "eslint-import-resolver-node": "^0.3.0",
-    "eslint-plugin-import": "^2.2.0",
-    "husky": "^0.13.4",
-    "jest-cli": "^19.0.2",
-    "lint-staged": "^3.4.1",
-    "prettier": "^1.14.0",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-includepaths": "^0.2.2",
-    "rollup-plugin-json": "^2.1.1",
-    "rollup-plugin-url": "^1.1.0"
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "babel-core": "7.0.0-bridge.0",
+    "axios-mock-adapter": "^1.15.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "commitizen": "^3.0.4",
+    "cz-conventional-changelog": "^2.1.0",
+    "dotenv": "^6.1.0",
+    "eslint": "^5.8.0",
+    "eslint-import-resolver-node": "^0.3.2",
+    "eslint-plugin-import": "^2.14.0",
+    "husky": "^1.1.3",
+    "jest-cli": "^23.6.0",
+    "lint-staged": "^8.0.4",
+    "prettier": "^1.14.3",
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-includepaths": "^0.2.3",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-url": "^2.0.1"
   },
   "lint-staged": {
     "{src,test}/**/*.js": [
