--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,6 @@
       }
     ],
     "@babel/typescript",
-    "@babel/plugin-proposal-class-properties"
   ],
   "env": {
     "test": {
@@ -24,10 +23,10 @@
               "node": "4.8"
             }
           }
-        ]
+        ],
+        "@babel/typescript"
       ],
       "plugins": [
-        "@babel/typescript",
         "@babel/plugin-proposal-class-properties"
       ]
     }
