--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "jsnext:main": "dist/esm/index.js",
   "engines": {
     "node": ">=4.8"
   },
