--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   "jest": {
     "moduleDirectories": [
       "node_modules",
+      "dist",
       "src"
     ],
     "moduleFileExtensions": [
@@ -104,7 +105,7 @@
       }
     },
     "testMatch": [
-      "**/tests/**/*.(ts|tsx)"
+      "<rootDir>/tests/**/*.(ts|tsx)"
     ]
   },
   "config": {
