Update jest config for TypeScript

--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     },
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "tsconfig.json"
+        "tsConfig": "tsconfig.json"
       }
     },
     "testMatch": [
