--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mollie/api-client",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "license": "BSD-3-Clause",
   "description": "Official Mollie API client for Node",
   "repository": {
@@ -17,9 +17,10 @@
     "payments",
     "gateway"
   ],
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "jsnext:main": "dist/esm/index.js",
+  "main": "dist/cjs/mollie.js",
+  "module": "dist/esm/mollie.js",
+  "jsnext:main": "dist/esm/mollie.js",
+  "types": "dist/esm/src/mollie.d.ts",
   "engines": {
     "node": ">=4.8"
   },
@@ -112,5 +113,8 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  }
+  },
+  "files": [
+    "dist/**/*"
+  ]
 }
