Skip rollup before running tests

--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "precommit": "lint-staged",
     "commit": "git-cz",
     "prepush": "yarn test",
-    "test": "yarn run build && jest",
-    "test:watch": "yarn run build && jest --watch",
-    "test:cov": "yarn run build && jest --coverage",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
     "test:unit:cov": "jest ./tests/unit --coverage",
     "build": "rollup -c",
     "lint:prettier": "prettier --write \"{src,tests,examples}/**/*.ts\"",
