--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "node": ">=4.8"
   },
   "scripts": {
-    "prepublish": "yarn run build",
+    "prepublish": "yarn build",
     "commit": "git-cz",
     "prepush": "yarn test",
     "test": "jest",
@@ -35,7 +35,7 @@
     "build": "rollup -c",
     "lint:prettier": "prettier --write \"{src,tests,examples}/**/*.ts\"",
     "lint:tslint": "tslint --config .tslintrc.json {src,test,examples}/**/*.ts",
-    "lint": "yarn run lint:tslint && yarn run lint:prettier"
+    "lint": "yarn lint:tslint && yarn lint:prettier"
   },
   "dependencies": {
     "axios": "^0.16.1",
