--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "lodash": "^4.17.4",
-    "qs": "^6.4.0",
-    "rollup-plugin-copy-glob": "^0.3.0"
+    "qs": "^6.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -73,7 +72,9 @@
     "tslib": "^1.9.3",
     "tslint": "^5.11.0",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "rollup-plugin-copy-glob": "^0.3.0"
+
   },
   "husky": {
     "hooks": {
