--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mollie/eslint-config-typescript": "^1.0.3",
     "@types/jest": "^23.3.13",
     "@types/lodash": "^4.14.120",
+    "@types/node": "^11.9.4",
     "@types/qs": "^6.5.1",
     "axios-mock-adapter": "^1.16.0",
     "babel-core": "7.0.0-bridge.0",
