--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "jsnext:main": "dist/esm/mollie.js",
   "types": "dist/esm/src/mollie.d.ts",
   "engines": {
-    "node": ">=4.8"
+    "node": ">=6.9.0"
   },
   "scripts": {
     "prepublish": "yarn build",
@@ -48,20 +48,18 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-typescript": "^7.1.0",
     "@mollie/eslint-config-typescript": "^1.0.3",
-    "@types/jest": "^23.3.13",
+    "@types/jest": "^24.0.5",
     "@types/lodash": "^4.14.120",
     "@types/node": "^11.9.4",
     "@types/qs": "^6.5.1",
     "axios-mock-adapter": "^1.16.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
     "commitizen": "^3.0.5",
     "cz-conventional-changelog": "^2.1.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.13.0",
     "husky": "^1.3.1",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
+    "jest": "^24.1.0",
     "lint-staged": "^8.1.0",
     "rollup": "^1.1.2",
     "rollup-plugin-copy-glob": "^0.3.0",
@@ -104,7 +102,7 @@
       "js"
     ],
     "transform": {
-      "^.+\\.(js|ts)$": "ts-jest",
+      "^.+\\.(ts)$": "ts-jest",
       "^.+\\.pem$": "<rootDir>/tests/unit/__stubs__/fileTransformer.js"
     },
     "globals": {
