--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,16 @@
 {
   "extends": [
-    "@mollie/eslint-config-typescript"
+    "@mollie/eslint-config-typescript",
+    "plugin:prettier/recommended"
   ],
   "rules": {
-    "max-len": ["warn", { "code": 140, "comments": 400 }],
     "no-underscore-dangle": "off",
     "import/prefer-default-export": "off",
     "no-plusplus": "off",
     "no-shadow": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "@typescript-eslint/indent": "off"
   },
   "settings": {
     "import/resolver": {
