--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
     "test:cov": "jest --coverage",
     "test:unit:cov": "jest ./tests/unit --coverage",
     "build": "rollup -c",
+    "lint:prettier": "prettier --write \"{src,tests,examples}/**/*.{js,ts}\"",
     "lint:eslint": "eslint --ext .ts,.js src/ tests/ examples/",
     "lint:eslint:fix": "eslint --ext .ts,.js --fix src/ tests/ examples/",
-    "lint": "yarn lint:eslint:fix"
+    "lint": "yarn lint:eslint:fix && yarn lint:prettier"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -58,9 +59,12 @@
     "cz-conventional-changelog": "^2.1.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.13.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lint-staged": "^8.1.0",
+    "prettier": "^1.16.4",
     "rollup": "^1.1.2",
     "rollup-plugin-copy-glob": "^0.3.0",
     "rollup-plugin-includepaths": "^0.2.3",
@@ -79,14 +83,17 @@
   },
   "lint-staged": {
     "src/**/*.ts": [
+      "prettier --write \"src/**/*.{js,ts}\"",
       "eslint --ext .js,.ts --fix src/",
       "git add src/"
     ],
     "tests/**/*.ts": [
+      "prettier --write \"tests/**/*.(js|ts)\"",
       "eslint --ext .js,.ts --fix tests/",
       "git add tests/"
     ],
     "examples/**/*.js": [
+      "prettier --write \"examples/**/*.(js|ts)\"",
       "eslint --ext .js,.ts --fix examples/",
       "git add examples/"
     ]
