--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.4.1",
+    "@babel/runtime": "^7.4.0",
     "@mollie/eslint-config-node": "0.0.1-alpha.3",
     "axios-mock-adapter": "^1.8.1",
     "babel-eslint": "^10.0.1",
