DASH-1618 - Upgrade Rollup + its plugins to latest version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ sudo: false
 language: node_js
 node_js:
   - "node"
-  - "4.8"
+  - "6.14"
 cache: yarn
 script:
+   - yarn run build
    - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then yarn run test:unit:cov; fi'
    - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then yarn run test:cov; fi'
 deploy:
@@ -15,4 +16,4 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
-    node: "4.8"
+    node: "6.14"
