--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:unit:cov": "jest ./tests/unit --coverage",
-    "build": "rollup -c",
+    "build": "rollup --config rollup.config.js",
     "lint:prettier": "prettier --write \"{src,tests,examples}/**/*.{js,ts}\"",
     "lint:eslint": "eslint --ext .ts,.js src/ tests/ examples/",
     "lint:eslint:fix": "eslint --ext .ts,.js --fix src/ tests/ examples/",
@@ -44,36 +44,34 @@
     "qs": "^6.6.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime": "^7.3.1",
-    "@mollie/eslint-config-typescript": "^1.0.3",
-    "@types/jest": "^24.0.5",
-    "@types/lodash": "^4.14.120",
-    "@types/node": "^11.9.4",
-    "@types/qs": "^6.5.1",
-    "axios-mock-adapter": "^1.16.0",
-    "babel-jest": "^24.1.0",
-    "babel-plugin-module-resolver": "^3.2.0",
-    "commitizen": "^3.0.5",
-    "cz-conventional-changelog": "^2.1.0",
-    "dotenv": "^6.2.0",
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.16.4",
-    "rollup": "^1.1.2",
-    "rollup-plugin-copy-glob": "^0.3.0",
-    "rollup-plugin-includepaths": "^0.2.3",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-typescript2": "^0.19.2",
-    "typescript": "^3.3.3"
+    "@babel/runtime": "^7.5.5",
+    "@mollie/eslint-config-typescript": "^1.1.0",
+    "@types/jest": "^24.0.16",
+    "@types/lodash": "^4.14.136",
+    "@types/node": "^12.6.9",
+    "@types/qs": "^6.5.3",
+    "axios-mock-adapter": "^1.17.0",
+    "babel-jest": "^24.8.0",
+    "commitizen": "^4.0.3",
+    "cz-conventional-changelog": "^3.0.2",
+    "dotenv": "^8.0.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^3.0.2",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.1",
+    "prettier": "^1.18.2",
+    "rollup": "^1.18.0",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-copy-glob": "^0.3.1",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "typescript": "^3.5.3"
   },
   "husky": {
     "hooks": {
