--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "plugins": ["@babel/plugin-proposal-class-properties", "@babel/plugin-transform-runtime"],
+  "plugins": ["@babel/plugin-proposal-class-properties"],
   "presets": [
     "@babel/preset-typescript",
     [
