Ignoring any VSC workspaces from Git.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-coverage/
-dist/
-node_modules/
-.idea/
-.vscode/
-.env
+/coverage/
+/dist/
+/node_modules/
+/.idea/
+/.vscode/
+/.env
 *.log
-.rpt2*/
+/.rpt2*/
 .DS_Store
 /mk-ca-bundle.pl
-examples/package-lock.json
-examples/yarn.lock
+/*.code-workspace
