Compiling type definitions again.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "main": "dist/mollie.cjs.js",
   "module": "dist/mollie.esm.js",
   "jsnext:main": "dist/mollie.esm.js",
-  "types": "dist/src/mollie",
+  "types": "dist/types/src/mollie.d.ts",
   "engines": {
     "node": ">=6.9.0"
   },
@@ -32,7 +32,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:unit:cov": "jest ./tests/unit --coverage",
-    "build": "rollup --config rollup.config.js",
+    "build": "yarn build:library && yarn build:declarations",
+    "build:library": "rollup --config rollup.config.js",
+    "build:declarations": "tsc src/mollie.ts --declaration --declarationDir dist/types --emitDeclarationOnly --allowSyntheticDefaultImports --resolveJsonModule",
     "lint:prettier": "prettier --write \"{src,tests,examples}/**/*.{js,ts}\"",
     "lint:eslint": "eslint --ext .ts,.js src/ tests/ examples/",
     "lint:eslint:fix": "eslint --ext .ts,.js --fix src/ tests/ examples/",
