Relaced a lot of the test suite, borrowing from the test suite of the PHP API.

--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
       "^.+\\.(js|jsx|ts|tsx)$": "babel-jest"
     },
     "testMatch": [
-      "<rootDir>/tests/**/*.(ts)"
+      "<rootDir>/tests/**/*.test.ts"
     ]
   },
   "config": {
