--- a/.travis.yml
+++ b/.travis.yml
@@ -4,36 +4,29 @@ sudo: false
 
 matrix:
   include:
-    - node_js: 6.9
-      env: RUN_THE_ACTUAL_BUILD=true PUBLISH_TO_NPM=true
-    - node_js: 8
-      env: RUN_THE_ACTUAL_BUILD=true
-    - node_js: 10
-      env: RUN_THE_ACTUAL_BUILD=true
-    - node_js: 11
-      env: RUN_THE_ACTUAL_BUILD=true
-    - node_js: 11
-      env: RUN_THE_ACTUAL_BUILD=false
+    - node_js: 6.14
+      env: PUBLISH_TO_NPM=true
+    - node_js: 12
 
 before_install:
   - >
-    if $(dpkg --compare-versions "${TRAVIS_NODE_VERSION}" "le" "11"); then
-      nvm install 11
-      nvm use 11
+    if $(dpkg --compare-versions "${TRAVIS_NODE_VERSION}" "le" "12"); then
+      nvm install 12
+      nvm use 12
     fi
 
 before_script:
   - nvm use ${TRAVIS_NODE_VERSION}
 
 script:
-   - >
-     if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then
-       npm run test:unit:cov
-     fi
-   - >
-     if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then
-       npm run test:cov
-     fi
+  - >
+    if [ "${TRAVIS_PULL_REQUEST}" != "false" ]; then
+      npm run test:unit:cov
+    fi
+  - >
+    if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then
+      npm run test:cov
+    fi
 
 deploy:
   provider: npm
