Don't enforce explicit return types in tests.

--- a/tests/.eslintrc
+++ b/tests/.eslintrc
@@ -5,7 +5,8 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-var-requires": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "@typescript-eslint/camelcase": "off"
+    "@typescript-eslint/camelcase": "off",
+    "@typescript-eslint/explicit-function-return-type": "off"
   },
   "env": {
     "node": true,
