--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "axios": "^0.19.0",
+    "jest-bluster": "^1.0.0",
     "lodash": "^4.17.15",
     "qs": "^6.7.0"
   },
@@ -112,7 +113,8 @@
     },
     "testMatch": [
       "<rootDir>/tests/**/*.test.ts"
-    ]
+    ],
+    "setupFilesAfterEnv": ["jest-bluster"]
   },
   "config": {
     "commitizen": {
