--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "target": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strict": true
   }
 }
