--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "test:unit:cov": "jest ./tests/unit --coverage",
     "build": "yarn build:library && yarn build:declarations",
     "build:library": "rollup --config rollup.config.js",
-    "build:declarations": "tsc src/types.ts --declaration --declarationDir dist/types --emitDeclarationOnly --allowSyntheticDefaultImports --resolveJsonModule",
+    "build:declarations": "tsc --project tsconfig-declarations.json",
     "lint:prettier": "prettier --write \"{src,tests,examples}/**/*.{js,ts}\"",
     "lint:eslint": "eslint --ext .ts,.js src/",
     "lint:eslint:fix": "eslint --ext .ts,.js --fix src/",
@@ -43,7 +43,6 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "axios": "^0.19.0",
-    "jest-bluster": "^1.0.0",
     "lodash": "^4.17.15",
     "qs": "^6.7.0"
   },
@@ -66,6 +65,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "husky": "^3.0.2",
     "jest": "^24.8.0",
+    "jest-bluster": "^1.0.1",
     "lint-staged": "^9.2.1",
     "prettier": "^1.18.2",
     "rollup": "^1.18.0",
@@ -73,7 +73,7 @@
     "rollup-plugin-copy-glob": "^0.3.1",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
