--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "dotenv": "^8.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "husky": "^3.0.2",
     "jest": "^24.8.0",
     "jest-bluster": "^1.0.1",
@@ -114,7 +114,9 @@
     "testMatch": [
       "<rootDir>/tests/**/*.test.ts"
     ],
-    "setupFilesAfterEnv": ["jest-bluster"]
+    "setupFilesAfterEnv": [
+      "jest-bluster"
+    ]
   },
   "config": {
     "commitizen": {
