--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "lodash": "^4.17.15",
-    "qs": "^6.7.0"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
@@ -53,7 +52,6 @@
     "@types/jest": "^24.0.16",
     "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.9",
-    "@types/qs": "^6.5.3",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "axios-mock-adapter": "^1.17.0",
     "babel-jest": "^24.8.0",
