--- a/.eslintrc
+++ b/.eslintrc
@@ -6,8 +6,8 @@
   ],
   "rules": {
     "prefer-rest-params": "off",
-    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_$", "varsIgnorePattern": "^_$" }],
-    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_$", "varsIgnorePattern": "^_$" }],
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_+$", "varsIgnorePattern": "^_+$" }],
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_+$", "varsIgnorePattern": "^_+$" }],
     "@typescript-eslint/explicit-function-return-type": "off"
   },
   "settings": {
