--- a/package.json
+++ b/package.json
@@ -41,36 +41,36 @@
     "lint": "yarn lint:eslint:fix && yarn lint:prettier"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "lodash": "^4.17.15"
+    "axios": "^0.21.1",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@mollie/eslint-config-typescript": "^1.3.2",
-    "@types/jest": "^24.0.16",
-    "@types/lodash": "^4.14.136",
-    "@types/node": "^12.6.9",
-    "@typescript-eslint/eslint-plugin": "^2.1.0",
-    "axios-mock-adapter": "^1.17.0",
-    "babel-jest": "^24.8.0",
-    "commitizen": "^4.0.3",
-    "cz-conventional-changelog": "^3.0.2",
-    "dotenv": "^8.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^3.0.2",
-    "jest": "^24.8.0",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@mollie/eslint-config-typescript": "^1.4.0",
+    "@types/jest": "^26.0.20",
+    "@types/lodash": "^4.14.167",
+    "@types/node": "^14.14.20",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "axios-mock-adapter": "^1.19.0",
+    "babel-jest": "^26.6.3",
+    "commitizen": "^4.2.2",
+    "cz-conventional-changelog": "^3.3.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^4.3.7",
+    "jest": "24.9.0",
     "jest-bluster": "^1.0.1",
-    "lint-staged": "^9.2.1",
-    "prettier": "^1.18.2",
-    "rollup": "^1.18.0",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "rollup": "^2.36.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
