Add tests for iterate methods.

--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "24.9.0",
     "jest-bluster": "^1.0.1",
+    "nock": "^13.2.1",
+    "nock-record": "^0.3.9",
     "prettier": "^2.3.2",
     "rollup": "^2.55.1",
     "rollup-plugin-babel": "^4.4.0",
