--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "ruply": "^1.0.0",
     "typescript": "^4.3.5"
   },
   "jest": {
