--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "lint": "yarn lint:eslint:fix && yarn lint:prettier"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "lodash": "^4.17.21"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.14.5",
