--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "typescript": "^4.3.5"
   },
   "jest": {
+    "testEnvironment": "node",
     "moduleDirectories": [
       "node_modules",
       "dist",
