Clean up a thing of two.

--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
     "@types/jest": "^26.0.24",
     "@types/lodash": "^4.14.172",
     "@types/node": "^16.4.11",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "axios-mock-adapter": "^1.19.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "axios-mock-adapter": "1.19.0",
     "babel-jest": "^27.0.6",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "24.9.0",
     "jest-bluster": "^1.0.1",
     "nock": "^13.2.1",
