--- a/package.json
+++ b/package.json
@@ -41,19 +41,18 @@
     "lint": "yarn lint:eslint:fix && yarn lint:prettier"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.24.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/preset-env": "^7.14.9",
-    "@babel/preset-typescript": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@mollie/eslint-config-typescript": "^1.5.1",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.172",
-    "@types/node": "^16.4.11",
+    "@types/jest": "24.9.0",
+    "@types/node": "^16.11.10",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "axios-mock-adapter": "1.19.0",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^27.3.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
@@ -64,13 +63,13 @@
     "jest-bluster": "^1.0.1",
     "nock": "^13.2.1",
     "nock-record": "^0.3.9",
-    "prettier": "^2.3.2",
-    "rollup": "^2.55.1",
+    "prettier": "^2.4.1",
+    "rollup": "^2.60.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "ruply": "^1.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.2"
   },
   "config": {
     "commitizen": {
