--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mollie/api-client",
-  "version": "3.5.1",
+  "version": "3.6.0-beta.1",
   "license": "BSD-3-Clause",
   "description": "Official Mollie API client for Node",
   "repository": {
