--- a/package.json
+++ b/package.json
@@ -50,15 +50,12 @@
     "@mollie/eslint-config-typescript": "^1.6.5",
     "@types/jest": "24.9.0",
     "@types/node": "^17.0.17",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
     "axios-mock-adapter": "1.19.0",
     "babel-jest": "^27.5.1",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.0",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "^8.19.0",
     "jest": "24.9.0",
     "jest-bluster": "^1.0.1",
     "nock": "^13.2.4",
@@ -70,6 +67,9 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "ruply": "^1.0.0",
     "typescript": "^4.5.5"
+  },
+  "resolutions": {
+    "eslint-plugin-import": "^2.26.0"
   },
   "config": {
     "commitizen": {
