--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        node-version: [[6.14, 12.x], [14.x], [16.x]]
+        node-version: [[6.14, 14.x], [18.x]]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
