--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.21.0",
     "@mollie/eslint-config-typescript": "^1.6.5",
-    "@types/jest": "24.9.0",
+    "@types/jest": "^29.5.11",
     "@types/node": "^18.14.6",
     "axios-mock-adapter": "1.19.0",
     "babel-jest": "^29.5.0",
@@ -57,7 +57,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.35.0",
-    "jest": "24.9.0",
+    "jest": "^29.7.0",
     "jest-bluster": "^1.0.1",
     "nock": "^13.3.0",
     "nock-record": "^0.3.9",
