--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,32 +2,25 @@ name: Node.js test
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   test:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        node-version: [[6.14, 14.x], [18.x]]
+        node-version: [14.x, 18.x, 20.x]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      # Some modules used for building and testing this library require a greater Node.js version than this library
-      # itself. Switch to the second Node.js version in the tuple before installing to game the system (and switch back
-      # later before running the tests).
-      - name: Use Node.js ${{ matrix.node-version[1] || matrix.node-version[0] }}
-        uses: actions/setup-node@v2
+        uses: actions/checkout@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version[1] || matrix.node-version[0] }}
+          node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - name: Use Node.js ${{ matrix.node-version[0] }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version[0] }}
       - name: Run test suite
         run: yarn test
         env:
