--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.5",
     "eslint": "^8.35.0",
-    "jest": "^29.7.0",
+    "jest": "24.9.0",
     "jest-bluster": "^2.0.0",
     "nock": "^13.5.5",
     "nock-record": "^0.3.9",
